# HelloCPP

./: README.md  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/nicolas/guillot/hellocpp/: MainActivity.java
app/src/main/jni/jni/: HellolibJNI.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
nativelibrary/: build.gradle
nativelibrary/src/main/: AndroidManifest.xml
nativelibrary/src/main/java/nicolas/guillot/hellocpp/core/: HelloLib.java
nativelibrary/src/main/jni/: CMakeLists.txt
nativelibrary/src/main/jni/impl/: Hellolib.cpp
nativelibrary/src/main/jni/jni/: HellolibJNI.cpp  HellolibJNI.h  Helper.cpp  NativeHolder.h
nativelibrary/src/main/jni/jni/impl/: HellolibJNI.cpp  Helper.cpp
nativelibrary/src/main/jni/jni/public/: HellolibJNI.h  Helper.h  NativeHolder.h
nativelibrary/src/main/jni/public/: Hellolib.h
nativelibrary/src/main/jni/scripts/: android.toolchain.cmake  build_android.sh
